# brave-core

./: DEPS  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_settings_strings.grdp
browser/: about_flags.cc  brave_content_browser_client.cc  brave_prefs_browsertest.cc  brave_profile_prefs.cc  brave_profile_prefs.h  sources.gni
components/omnibox/browser/: BUILD.gn  brave_bookmark_provider.cc  brave_bookmark_provider_unittest.cc  brave_fake_autocomplete_provider_client.cc  brave_history_quick_provider.cc  brave_history_quick_provider_unittest.cc  brave_history_url_provider.cc  brave_history_url_provider_unittest.cc  brave_omnibox_prefs.cc  brave_omnibox_prefs.h  brave_search_provider.cc  brave_search_provider.h  brave_search_provider_unittest.cc  brave_shortcuts_provider.cc  brave_shortcuts_provider_unittest.cc  sources.gni  suggested_sites_provider.cc  suggested_sites_provider_unittest.cc  topsites_provider.cc  topsites_provider_unittest.cc
patches/: chrome-VERSION.patch  chrome-browser-ui-color-BUILD.gn.patch  chrome-browser-ui-views-frame-browser_view.cc.patch  chrome-browser-ui-views-frame-browser_view_layout.cc.patch  chrome-browser-ui-views-frame-tab_strip_region_view.h.patch  chrome-browser-ui-views-side_panel-side_panel_coordinator.cc.patch  chrome-browser-ui-views-tabs-tab_container.cc.patch  chrome-browser-ui-views-tabs-tab_drag_controller.cc.patch  chrome-browser-ui-views-tabs-tab_strip.cc.patch  chrome-browser-ui-views-tabs-tab_style_views.cc.patch  (+3 more)
renderer/: BUILD.gn
test/: BUILD.gn
(+300 files in other folders)
